# npe2

./: .github_changelog_generator  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  _implement_sample.py  napari-schema.json  pyproject.toml  pytest.ini  schema.json  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  fetch_manifests.yml  sync_schema.yml  test_all_plugins.yml  test_conversion.yml  update_changelog.yml
EXAMPLE/: main.py  napari.json  napari.yaml  pyproject.toml
_docs/: example_manifest.yaml  render.py
_docs/example_plugin/: some_module.py
_docs/templates/: _layer_data_guide.md.jinja  _npe2_contributions.md.jinja  _npe2_manifest.md.jinja  _npe2_menus_guide.md.jinja  _npe2_readers_guide.md.jinja  _npe2_sample_data_guide.md.jinja  _npe2_widgets_guide.md.jinja  _npe2_writers_guide.md.jinja  _readers_guide.md.jinja  _sample_data_guide.md.jinja  _widgets_guide.md.jinja  _writers_guide.md.jinja  contributions.md.jinja  first_plugin.md.jinja  guides.md.jinja  index.md.jinja  manifest.md.jinja
docs/: _config.yml  _toc.yml  example_manfest.yaml  example_manifest.yaml  index.md  render.py  requirements.txt
docs/_build/: contributions.md
docs/templates/: contributions.jinja  contributions.md.jinja  guides.md.jinja  manifest.jinja  manifest.md.jinja
npe2/: __init__.py  _command_registry.py  _context.py  _dynamic_plugin.py  _fetch.py  _from_npe1.py  _plugin_manager.py  _pytest_plugin.py  _setuptools_plugin.py  _setuputils.py  _testsupport.py  _tmp_plugin.py  _types.py  _version.py  cli.py  command_registry.py  implements.py  implements.pyi  io_utils.py  manifest_cli.py  plugin_manager.py  types.py  utils.py
npe2/_inspection/: __init__.py  _compile.py  _fetch.py  _from_npe1.py  _full_install.py  _setuputils.py  _visitors.py
npe2/conversion/: __init__.py  hook_specifications.py  types.py
npe2/manifest/: __init__.py  __main__.py  _bases.py  _npe1_adapter.py  _npe1_adaptor.py  _npe1_shim.py  _package_metadata.py  _validators.py  activation.py  commands.py  configuration._py  configuration.py  contributions.py  icon.py  io.py  keybindings._py  keybindings.py  menus.py  package_metadata.py  readers.py  sample_data.py  schema.py  spdx.txt  submenu.py  themes.py  utils.py  widgets.py  writers.py
npe2/manifest/contributions/: __init__.py  _commands.py  _configuration.py  _contributions.py  _icon.py  _json_schema.py  _keybindings.py  _menus.py  _readers.py  _sample_data.py  _submenu.py  _themes.py  _widgets.py  _writers.py
src/npe2/: __init__.py  __main__.py  _command_registry.py  _dynamic_plugin.py  _plugin_manager.py  _pydantic_compat.py  _pydantic_util.py  _pytest_plugin.py  _setuptools_plugin.py  cli.py  implements.py  implements.pyi  io_utils.py  plugin_manager.py  types.py
src/npe2/_inspection/: __init__.py  _compile.py  _fetch.py  _from_npe1.py  _full_install.py  _setuputils.py  _visitors.py
src/npe2/manifest/: __init__.py  _bases.py  _npe1_adapter.py  _package_metadata.py  _validators.py  schema.py  utils.py
src/npe2/manifest/contributions/: _commands.py  _configuration.py  _contributions.py  _icon.py  _json_schema.py  _keybindings.py  _menus.py  _readers.py  _sample_data.py  _submenu.py  _themes.py  _widgets.py  _writers.py
tests/: conftest.py  test__io_utils.py  test_all_plugins.py  test_cli.py  test_compile.py  test_config_contribution.py  test_configuration.py  test_contributions.py  test_conversion.py  test_decorators.py  test_docs.py  test_fetch.py  test_implements.py  test_io_utils.py  test_manifest.py  test_npe1_adapter.py  test_npe2.py  test_package_meta.py  test_plugin_manager.py  test_pm_module.py  test_pytest_plugin.py  test_schema.py  test_setuptools_plugin.py  test_shim.py  test_tmp_plugin.py  test_utils.py  test_validations.py
tests/fixtures/my-compiled-plugin/: setup.cfg
tests/fixtures/my-compiled-plugin/my_module/: _a.py  _b.py
tests/npe1-plugin/: setup.cfg
tests/npe1-plugin-src/: setup.cfg
tests/npe1-plugin-src/src/npe1-plugin1-0.0.1.dist-info/: METADATA  entry_points.txt  top_level.txt
tests/npe1-plugin/npe1-plugin-0.0.1.dist-info/: METADATA  RECORD  entry_points.txt  top_level.txt
tests/npe1-plugin/npe1_module/: __init__.py
tests/sample/: _implement_sample.py  _with_decorators.py
tests/sample/my_plugin/: __init__.py  napari.yaml
tests/sample/my_plugin-1.2.3.dist-info/: METADATA  entry_points.txt
