[metadata]
name = npe2
description = proposal for napari plugin refactor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/napari/npe2
author = Talley Lambert, Nathan Clack
author_email = talley.lambert@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source Code =https://github.com/napari/npe2

[options]
packages = find:
install_requires =
    PyYAML
    appdirs
    build
    psygnal>=0.3.0
    pydantic
    pytomlpp
    rich
    typer
python_requires = >=3.8
include_package_data = True
setup_requires =
    setuptools-scm
zip_safe = False

[options.entry_points]
console_scripts =
    npe2 = npe2.cli:main
pytest11 =
    npe2 = npe2._pytest_plugin

[options.extras_require]
dev =
    black
    flake8
    flake8-docstrings
    ipython
    isort
    jedi<0.18.0
    magicgui
    mypy
    numpy
    pre-commit
    pydocstyle
    pytest
    pytest-cov
    typer
docs =
    Jinja2
testing =
    magicgui
    napari-plugin-engine
    napari-svg
    numpy
    pytest
    pytest-cov

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = all
min-python-version = 3.8
ignore = D100,D107,D203,D212,D213,D402,D413,D415,D416,W503,E203,B010,B008
per-file-ignores =
    tests/**: D
    _docs/**: D

[isort]
profile = black
src_paths = npe2

[pydocstyle]
match_dir = npe2
convention = numpy
add_select = D402,D415,D417
ignore = D100, D213, D401, D413, D107

[mypy]
files = npe2
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
implicit_reexport = False
show_column_numbers = True
show_error_codes = True
ignore_missing_imports = True

[coverage:run]
omit =
    npe2/manifest/contributions/_configuration.py
    npe2/manifest/contributions/_keybindings.py
    npe2/manifest/menus.py
    npe2/manifest/package_metadata.py

[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    @overload
    @abstractmethod
    except ImportError
